Jessica has completed the Vets In Tech Pre-work

--- a/index.html
+++ b/index.html
@@ -8,5 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+<h1>My Favorite Things</h1>
+<img src="indexpic.jpg" alt="Jess Nov 2020" width="100px">
+<h2>My Favorite Movies</h2>
+<ol>
+    <li>Idiocracy</li>
+    <li>Amelie</li>
+    <li>Lady and the Tramp</li>
+    <li>Bill and Teds Excellent Adventure</li>
+    <li>Land Before Time</li>
+  </ol>
+<h2>My Favorite Places to Visit</h2>
+<ul>
+    <li>Family - in SoCal</li>
+    <li>St John Island, USVI</li>
+    <li>Quiet, clean waterfront areas like beaches, lakes</li>
+    <li>Mountains</li>
+    <li>Berkshires</li>
+  </ul>
+<p>
+    <a href="https://www.linkedin.com/in/jyperry/" target="_blank">LinkedIn</a>
+ </p>
 </body>
 </html>
